--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,10 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+homepage:
+  path:   /
+  controller: App\Controller\ListController::index
+
+login:
+  path:   /login
+  controller: App\Controller\SecurityController::login
