--- a/composer.json
+++ b/composer.json
@@ -1,91 +1,67 @@
 {
-	"name": "vendor_name/declaracion",
-	"description": "description",
-	"minimum-stability": "stable",
-	"type": "project",
-	"license": "proprietary",
-
-	"authors": [
-		{
-		"name": "omar berroteran",
-		"email": "omarberroteran@gmail.com"
-		}
-	],
-
-
-  "config": {
-    "platform": {
-      "php": "7.3"
-    }
-  },
-
-      "require": {
-        "php": "^7.2.5",
+    "type": "project",
+    "license": "proprietary",
+    "require": {
+        "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "sensio/framework-extra-bundle": "^5.5",
-        "symfony/apache-pack": "^1.0",
-        "symfony/asset": "5.1.*",
-        "symfony/console": "5.1.*",
-        "symfony/dotenv": "5.1.*",
-        "symfony/expression-language": "5.1.*",
+        "symfony/asset": "4.4.*",
+        "symfony/console": "4.4.*",
+        "symfony/dotenv": "4.4.*",
+        "symfony/expression-language": "4.4.*",
         "symfony/flex": "^1.3.1",
-        "symfony/form": "5.1.*",
-        "symfony/framework-bundle": "5.1.*",
-        "symfony/http-client": "5.1.*",
-        "symfony/intl": "5.1.*",
-        "symfony/mailer": "5.1.*",
+        "symfony/form": "4.4.*",
+        "symfony/framework-bundle": "4.4.*",
+        "symfony/http-client": "4.4.*",
+        "symfony/intl": "4.4.*",
+        "symfony/mailer": "4.4.*",
         "symfony/monolog-bundle": "^3.1",
-        "symfony/notifier": "5.0.*",
-        "symfony/orm-pack": "^1.0",
-        "symfony/process": "5.0.*",
-        "symfony/security-bundle": "5.0.*",
+        "symfony/process": "4.4.*",
         "symfony/serializer-pack": "*",
-        "symfony/string": "5.1.*",
-        "symfony/translation": "5.1.*",
-        "symfony/twig-pack": "^1.0",
-        "symfony/validator": "5.1.*",
-        "symfony/web-link": "5.1.*",
-        "symfony/yaml": "5.1.*",
-        "symfony/security-csrf": "5.1.*",
-        "symfony/security-core": "5.1.*",
-        "symfony/security-http": "5.1.*",
-        "doctrine/annotations": "^1.10",
-        "easycorp/easyadmin-bundle": "2.3.9"
-
+        "symfony/web-link": "4.4.*",
+        "symfony/yaml": "4.4.*"
     },
-  "require-dev": {
-    "symfony/debug-pack": "*",
-    "symfony/maker-bundle": "^1.19",
-    "symfony/profiler-pack": "*",
-    "symfony/test-pack": "*",
-    "doctrine/doctrine-fixtures-bundle": "^3.3"
-  },
-  "autoload": {
-    "psr-4": {
-      "App\\": "src/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "App\\Tests\\": "tests/"
-    }
-  },
-  "replace": {
-    "symfony/polyfill-ctype": "*",
-    "symfony/polyfill-iconv": "*",
-    "symfony/polyfill-php72": "*",
-    "symfony/polyfill-php71": "*",
-    "symfony/polyfill-php70": "*",
-    "symfony/polyfill-php56": "*",
-    "paragonie/random_compat": "2.*",
-    "psr/container": "1.*"
-  },
-  "scripts": {
+    "require-dev": {
+        "sensio/framework-extra-bundle": "^5.5",
+        "symfony/debug-pack": "*",
+        "symfony/maker-bundle": "^1.19",
+        "symfony/orm-pack": "^1.0",
+        "symfony/profiler-pack": "*",
+        "symfony/security-bundle": "4.4.*",
+        "symfony/test-pack": "*",
+        "symfony/translation": "4.4.*",
+        "symfony/twig-pack": "^1.0",
+        "symfony/validator": "4.4.*"
+    },
+    "config": {
+        "preferred-install": {
+            "*": "dist"
+        },
+        "sort-packages": true
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "tests/"
+        }
+    },
+    "replace": {
+        "paragonie/random_compat": "2.*",
+        "symfony/polyfill-ctype": "*",
+        "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php71": "*",
+        "symfony/polyfill-php70": "*",
+        "symfony/polyfill-php56": "*"
+    },
+    "scripts": {
         "auto-scripts": {
-			"cache:clear": "symfony-cmd",
-			"assets:install %PUBLIC_DIR%": "symfony-cmd"
-		},
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+        },
         "post-install-cmd": [
             "@auto-scripts"
         ],
@@ -93,13 +69,13 @@
             "@auto-scripts"
         ]
     },
-  "conflict": {
-    "symfony/symfony": "*"
-  },
-  "extra": {
-    "symfony": {
-      "allow-contrib": false,
-      "require": "5.1.*"
+    "conflict": {
+        "symfony/symfony": "*"
+    },
+    "extra": {
+        "symfony": {
+            "allow-contrib": false,
+            "require": "4.4.*"
+        }
     }
-  }
 }
