--- a/.env
+++ b/.env
@@ -30,6 +30,7 @@ APP_SECRET=7346e7f4217887c9fce75c30277c202a
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+##SERVER DATABASE_URL=mysql://neomarke_emenu:CfR^iY2bck=u@127.0.0.1:3306/neomarke_emenu
 DATABASE_URL=mysql://giniem:GInIem*123!@127.0.0.1:3306/menu?serverVersion=5.7
 
 ###< doctrine/doctrine-bundle ###
