--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,7 +3,7 @@
 #    controller: App\Controller\DefaultController::index
 homepage:
   path:   /
-  controller: App\Controller\ListController::index
+  controller: App\Controller\NegocioController::index
 
 login:
   path:   /login
