Avances viernes 03, aun falta afinar, mejorada la barra, formulario de producto.
Signed-off-by: Omar Berroterán Silva <omarberroteranlkf@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,7 @@
 
 # Embedded web-server pid file
 /.web-server-pid
+/menu_chan2.zip
+/composer (copy).json
+/.idea/
+/public/uploads/images/1/cat/
