--- a/.env
+++ b/.env
@@ -32,5 +32,8 @@ APP_SECRET=7346e7f4217887c9fce75c30277c202a
 #DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
 ##SERVER DATABASE_URL=mysql://neomarke_emenu:CfR^iY2bck=u@127.0.0.1:3306/neomarke_emenu
 DATABASE_URL=mysql://giniem:GInIem*123!@127.0.0.1:3306/menu?serverVersion=5.7
-
 ###< doctrine/doctrine-bundle ###
+
+AUTH0_CLIENT_ID=AUTH0_CLIENT_ID
+AUTH0_CLIENT_SECRET=AUTH0_CLIENT_SECRET
+AUTH0_DOMAIN=AUTH0_DOMAIN
